Integrate firebase functions, NOT TESTED

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "scripts": {
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
+    "build:server": "npm --prefix src/server/functions run build",
+    "lint:server": "npm --prefix src/server/functions run lint",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject"
   },
