--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "generate-styles": "node contrib/generate-css/index.js"
   },
   "devDependencies": {
     "@types/jest": "^22.2.3",
@@ -24,6 +25,7 @@
     "@types/react-router-dom": "^4.2.6",
     "firebase-tools": "^3.18.4",
     "prettier": "^1.12.1",
+    "tachyons-generator": "^0.22.1",
     "typescript": "^2.8.3"
   }
 }
