--- a/contrib/generate-css/css-config.json
+++ b/contrib/generate-css/css-config.json
@@ -2,7 +2,7 @@
   "typeScale": [
     3, 2.25, 1.5, 1.25, 1, 0.875
   ],
-  "spacing": [2, 4, 6, 8, 16, 32],
+  "spacing": [0, 0.25, 0.5, 1, 2, 4, 8, 16],
   "lineHeight": [1, 1.25, 1.5],
   "customMedia": [
     { "m": 48 },
