--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/classnames": "^2.2.3",
+    "classnames": "^2.2.5",
     "firebase": "^4.13.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-feather": "^1.1.0",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.15.1",
     "tachyons": "^4.9.1"
