--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-feather": "^1.1.0",
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.15.1",
-    "tachyons": "^4.9.1"
+    "tachyons": "^4.9.1",
+    "unstated": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts-ts start",
